manifest/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: addressbook-service
  namespace: directory
spec:
  selector:
    app: addressbook
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
